--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
-WATIRIMUNYAGA
-NEYLA5
+# These individuals contributed to the AIRBNB project in this repository 
+Mary Munyanga<marymunyaga33@gmail.com>
+Esther Wanjiku  Maina<fortpointgraphics@gmail.com>
